fix contrast ration of disclaimer background

--- a/index.css
+++ b/index.css
@@ -46,7 +46,6 @@ body * {
 }
 
 .disclaimer {
-    background-color: gray;
     border-radius: 1rem;
     border: 1px solid var(--libertarian-yellow);
     max-width: 90vw;
